* Mon Aug 11 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.11
- github is now hosting the ibus-chewing tarballs.

* Sat Feb 01 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.10.1
- Resolves Bug 1054937 - Broken %defattr in ibus-chewing

* Sat Feb 01 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.10
- Resolves Bug 1054937 - Broken %defattr in ibus-chewing

* Sat Feb 01 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.9
- Resolves Bug 1054937 - Broken %defattr in ibus-chewing

* Thu Jan 16 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.7
- Target "translation" is built separately with all, 
  in order to tame multiple job make.

* Thu Jan 16 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.6
- Fixed Build for RHEL7

* Wed Jan 15 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.5
- Resolves Bug 1013977 - ibus-chewing needs to have ibus write-cache --system in %post and %postun
- Resolves Bug 1027031 - CVE-2013-4509 ibus-chewing: ibus: visible password entry flaw [rhel-7.0]
- Resolves Bug 1028911 - [zh_TW]'Chinese<->English' switch does not work when clicking on the Chewing menu list.
- Resolves Bug 1045868 - ibus-chewing *again* not built with $RPM_OPT_FLAGS
- Option "Sync between caps lock and IM":
  + Default of  is changed to "disable",  because the previous default
    "keyboard" cause bug 1028911 for GNOME Shell.
  + Now Sync from "input method" can control Caps LED in GNOME shell.
- Translation added: de_DE, es_ES, it_IT, pt_BR, uk_UA
- Set environment IBUS_CHEWING_LOGFILE for ibus-chewing log. 

* Mon Dec 23 2013 Ding-Yi Chen <dchen at redhat.com> - 1.4.4
- Resolves Bug 842856 - ibus-chewing 1.4.3-1 not built with $RPM_OPT_FLAGS
- Resolves Bug 1027030 - CVE-2013-4509 ibus-chewing: ibus: visible 
  password entry flaw [fedora-all]
  Thanks czchen for the GitHub pull request 39.
- Added translations: fr_FR, ja_JP, ko_KR
- Adopt cmake-fedora-1.2.0

* Mon Nov 26 2012 Ding-Yi Chen <dchen at redhat.com> - 1.4.3
- Fixed GitHub issue #30: Rework decorate_preedit