@@ -1,12 +1,14 @@
 PRJ_VER=1.4.11
 SUMMARY=
-REDHAT_BUGZILLA=
+REDHAT_BUGZILLA=1119963
 [Changes]
 - github is now hosting the ibus-chewing tarballs.
+- Resolves Bug 1013977 - Slow focus change with ibus-chewing
+    Fixed github issue #45: Optimize properties handling.
+    Thanks Ueno.
 - Fixed github issue #43: First space not able to input
-    Thanks FreedomKnight
+    Thanks FreedomKnight.
 - Fixed github issue #44: Update input-events (for libchewing-0.4.0)
-    Thanks hiunnhue
-- Fixed github issue #45: Optimize properties handling
-    Thanks Ueno
+    Thanks hiunnhue.
+- 
 
